--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "firebase": "^7.24.0",
-    "git": "^0.1.5",
-    "github": "^14.0.0",
-    "http": "^0.0.1-security",
-    "needle": "^3.0.0",
-    "path": "^0.12.7",
+    "firebase": "^7.17.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "3.4.1",
     "react-twitter-embed": "^3.0.3",
-    "socket.io": "^4.4.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "needle": "^2.5.2",
+    "socket.io": "^3.0.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   },
   "scripts": {
     "start": "react-scripts start",
