--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.24.0",
+    "body-parser": "^1.19.0",
+    "concurrently": "^6.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "firebase": "^7.17.2",
+    "http": "^0.0.1-security",
+    "http-proxy-middleware": "^2.0.1",
+    "needle": "^2.5.2",
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "3.4.1",
     "react-twitter-embed": "^3.0.3",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "needle": "^2.5.2",
-    "socket.io": "^3.0.4"
+    "request": "^2.88.2",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^4.4.0",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
