--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "firebase": "^7.17.2",
     "http": "^0.0.1-security",
     "http-proxy-middleware": "^2.0.1",
-    "needle": "^2.5.2",
+    "needle": "^2.9.1",
     "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -27,6 +27,7 @@
     "request": "^2.88.2",
     "socket.io": "^3.1.2",
     "socket.io-client": "^4.4.0",
+    "twitter": "^1.7.1",
     "util": "^0.12.4"
   },
   "devDependencies": {
