--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "start": "node server/server",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
